[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plc-ascii"
version = "0.1.0"
description = "ASCII ladder logic editor, simulator, and remote runtime scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Markdown>=3.6",
  "pyserial>=3.5",
  "tkinterweb>=4.2.0",
]

[project.optional-dependencies]
serial = []

[project.scripts]
plc-ascii = "plc_ascii.ide:main"
plc-ascii-cli = "plc_ascii.app:main"
plc-runtime = "plc_runtime.runtime:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"plc_runtime.propeller2" = ["runtime.fth"]
